<resources>
    <string name="app_name">MyCV-AhlamM</string>

    <string name="welcome">Welcome to my CV App</string>
    <string name="app_language_is_kotlin">This app has been developed in Kotlin</string>


    <string name="next">Go to CV</string>

    <string name="name">Name</string>
    <string name="profession_title">Profession Title</string>
    <string name="dob">Birth date</string>
    <string name="social_state">Social State</string>
    <string name="languages">Languages</string>


    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>


    <string name="work">Work</string>
    <string name="tasks">Tasks</string>
    <string name="tech">Tech</string>
    <string name="edu_cer">Edu-Cer</string>
    <string name="personal">Personal</string>


    <!-- CV sections -->
    <!-- WARNING : this strings matches strings in the json info file -->
    <string name="about_me">About me</string>
    <string name="personal_info">Personal info.</string>
    <string name="contact_info">Contact info.</string>
    <string name="work_experience">Work Experience</string>
    <string name="professional_skills">Professional Skills</string>
    <string name="languages_I_speak">Languages I Speak</string>
    <string name="techniques">Techniques</string>
    <string name="design_patterns">Design Patterns</string>
    <string name="tech_tools">Tech. Tools</string>
    <string name="supporting_tools">Supporting Tools</string>
    <string name="IT_courses">IT Courses</string>
    <string name="other_courses">Other Courses</string>
    <string name="personal_skills">Personal Skills</string>
    <string name="familiar_with_OSs">Familiar with (OSs)</string>
    <string name="methodologies">Methodologies</string>
    <string name="education">Education</string>
    <string name="hobbies">Hobbies</string>
    <string name="other_skills">Other Skills</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>